# genai-learning-odyssey

genai-requirements-automation/: main.py  proj_setup.bat  pyproject.toml
genai-requirements-automation/genai-requirements-automation/: .gitignore  FRONTEND_QUICKSTART.md  HOW_TO_USE.md  PRESENTATION_SLIDES.md  QUICKSTART.md  README.md  Run_application.txt  TEST_GENERATION_FEATURES.md  check_setup.py  pyproject.toml  requirements.txt
genai-requirements-automation/genai-requirements-automation/.cursor/: settings.json
genai-requirements-automation/genai-requirements-automation/backend/: MODEL_CONFIG.md  app.py  run.py  test_api.py  test_openai.py  upload_and_generate.py
genai-requirements-automation/genai-requirements-automation/backend/core/: __init__.py  config.py  document_parser.py  embeddings.py  file_generator.py  llm_engine.py  rag_retriever.py  vectorstore.py
genai-requirements-automation/genai-requirements-automation/backend/routers/: __init__.py  ado.py  chatbot.py  download.py  generate.py  upload.py
genai-requirements-automation/genai-requirements-automation/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
genai-requirements-automation/genai-requirements-automation/frontend/src/: App.css  App.jsx
genai-requirements-automation/genai-requirements-automation/frontend/src/components/: ADOPushButton.jsx  Chatbot.jsx  GeneratedDocs.jsx  UploadArea.jsx
genai-requirements-automation/genai-requirements-automation/frontend/src/services/: api.js
genai-requirements-automation_gradio/: .env  requirements.txt  working_gradio_app.py
genai-requirements-automation_gradio/backend/: chatbot_service.py  (+6 more)
gradio/: app.py
(+6 files in other folders)
