[project]
name = "genai-requirements-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.4",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "langchain>=1.0.7",
    "openai>=2.8.0",
    "pdfplumber>=0.11.8",
    "pydantic>=2.12.4",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.4",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]
