[project]
name = "genai-requirements-automation"
version = "0.1.0"
description = "FastAPI backend for requirements automation with GenAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.10.3",
    "reportlab>=4.0.7",
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
    "openai>=1.3.0",
    "azure-devops>=7.1.0b4",
    "aiofiles>=23.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.1",
    "black>=23.11.0",
    "ruff>=0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

